-Updated backend api routes for implementation -Started api integration in frontend -Created reusable components for ride usage -Initialized frontend changes

--- a/frontend/src/i18n/languages/en.json
+++ b/frontend/src/i18n/languages/en.json
@@ -7,5 +7,103 @@
     "email": "Email",
     "password": "Password",
     "name": "Name",
-    "collegeName": "College Name"
+    "username": "Username",
+    "collegeName": "College Name",
+    "notRegistered": "Not registered yet ?",
+    "clickHere": "Click here",
+    "toSignup": "to signup",
+    "already": "Already have an account?",
+    "toLogin": "to login",
+    "oops": "Oops",
+    "welcome": "Welcome to",
+    "intro": "The easiest way to get around, share your ride, or request a lift with a tap.",
+    "getStarted": "Get Started",
+    "chooseRide": "Choose Your Ride.",
+    "shareRide": "Share a Ride",
+    "shareMsg": "Share your ride and help others commute. Save money while contributing to the environment.",
+    "becomeDriver": "Become a Driver",
+    "requestRide": "Request a Ride",
+    "searchAvailableRides": "Search for Available Rides",
+    "findRide": "Find a Ride",
+    "findPeopleMsg": "Find people going in the same direction and share your ride together, reducing the cost and carbon footprint.",
+    "needRideMsg": "Need a ride? Request a lift from drivers near you and get to your destination safely and comfortably.",
+    "pageNotFound": "We can't find the page.",
+    "returnHome": "Return to Home",
+    "role": "Role",
+    "selectedFile": "Selected file:",
+    "remove": "Remove",
+    "peer": "Peer",
+    "ride": "Ride",
+    "mobile": "Mobile Number",
+    "uploadCollegeID": "Upload College ID",
+    "fileSizeConstraint": "File size should not exceed 5 MB.",
+    "fileFormatConstraint": "Only JPG and PNG files are allowed.",
+    "rightsReserved": "PeerRide. All rights reserved.",
+    "copyright": "©",
+    "company": "Company",
+    "reviews": "Reviews",
+    "support": "Support",
+    "helpCenter": "Help Center",
+    "contactUs": "Contact Us",
+    "explore": "Explore",
+    "offers": "Offers",
+    "rides": "Rides",
+    "info": "Info",
+    "terms": "Terms and conditions",
+    "privacy": "Privacy policy",
+    "cookies": "Cookies",
+    "notifications": "Notifications",
+    "forgetPassword": "Forget Password",
+    "logout": "Logout",
+    "profileImg": "Profile Image",
+    "yourRides": "Your Rides",
+    "loading": "Loading",
+    "serviceunavailable": "Service Unavailable",
+    "pageNotExists": "Oops! The page you're looking for doesn't exist.",
+    "signup": "Sign Up",
+    "leaveReview": "Leave a Review",
+    "review": "Review",
+    "userReviews": "User Reviews",
+    "submitReview": "Submit Review",
+    "yourReview": "Your Review",
+    "cancel": "Cancel",
+    "addReview": "Add Review",
+    "enterReview": "Enter your review",
+    "userReview": "User Reviews",
+    "noReviewsFound": "No Reviews Found",
+    "startingLocation": "Enter starting location",
+    "destinationLocation": "Enter destination",
+    "findPerfectRide": "Find Your Perfect Ride",
+    "rideSearch": "Whether you're driving or catching a ride, start here.",
+    "reviewQuote": "Be the first to leave a review and help others make better choices!",
+    "from": "From",
+    "to": "To",
+    "searchRide": "Search Ride",
+    "signin": "Sign In",
+    "notLogin": "Redirecting to Login Page",
+    "peerrideaim": "PeerRide is a student-centric ride-sharing platform built to make campus travel smarter, safer, and more affordable. We connect college students with rides tailored to their schedules and preferences — powered by smart matching algorithms and real-time communication.",
+    "ok": "Ok",
+    "whatWeOffer": "What We Offer",
+    "ourGoals": "Our Goals",
+    "messages": {
+        "loginSuccess": "Successfully logged in",
+        "registerSuccess": "Registered successfully",
+        "createReviewSuccess": "Successfully created new review",
+        "redirectLogin": "You are not logged in currently. Please login to access this feature."
+    },
+    "error": {
+        "login": "Invalid username or password",
+        "register": "Please enter all the fields correctly."
+    },
+    "formMessages": {
+        "usernameRequired": "Username is required",
+        "passwordRequired": "Password is required",
+        "mobileRequired": "Mobile number is required",
+        "mobileConstraint": "Mobile number must be 10 digits",
+        "passwordConstraint": "Password must be between 6-14 characters",
+        "collegeNameRequired": "College name is required",
+        "collegeIDRequired": "College ID is required",
+        "fromRequired": "Please provide starting location",
+        "toRequired": "Please provide ending location"
+    }
 }
