-Updated ui changes for frontend -Added edit profile image api -Added ride details and ride card component -Added user profile section -Implemented authentication

--- a/frontend/src/i18n/languages/en.json
+++ b/frontend/src/i18n/languages/en.json
@@ -62,15 +62,17 @@
     "pageNotExists": "Oops! The page you're looking for doesn't exist.",
     "signup": "Sign Up",
     "leaveReview": "Leave a Review",
-    "review": "Review",
+    "review": "Reviews",
     "userReviews": "User Reviews",
     "submitReview": "Submit Review",
     "yourReview": "Your Review",
     "cancel": "Cancel",
     "addReview": "Add Review",
     "enterReview": "Enter your review",
+    "fullName": "Full Name",
     "userReview": "User Reviews",
     "noReviewsFound": "No Reviews Found",
+    "userProfile": "User Profile",
     "startingLocation": "Enter starting location",
     "destinationLocation": "Enter destination",
     "findPerfectRide": "Find Your Perfect Ride",
@@ -79,17 +81,33 @@
     "from": "From",
     "to": "To",
     "searchRide": "Search Ride",
-    "signin": "Sign In",
     "notLogin": "Redirecting to Login Page",
     "peerrideaim": "PeerRide is a student-centric ride-sharing platform built to make campus travel smarter, safer, and more affordable. We connect college students with rides tailored to their schedules and preferences — powered by smart matching algorithms and real-time communication.",
     "ok": "Ok",
     "whatWeOffer": "What We Offer",
     "ourGoals": "Our Goals",
+    "readMore": "Read More",
+    "seat": "Seat",
+    "left": "left",
+    "rideRequest": "Request Ride",
+    "date": "Date",
+    "seats": "Seats",
+    "availableRides": "Available Rides",
+    "noRides": "No Rides Available",
+    "adjustSearch": "Try adjusting your filters or check back later.",
+    "arrow": "→",
+    "goback": "← Go Back",
+    "departure": "Departure:",
+    "seatsAvailable": "Seats Available:",
+    "driver": "Driver:",
+    "note": "Note:",
+    "profile": "Profile",
     "messages": {
         "loginSuccess": "Successfully logged in",
         "registerSuccess": "Registered successfully",
         "createReviewSuccess": "Successfully created new review",
-        "redirectLogin": "You are not logged in currently. Please login to access this feature."
+        "redirectLogin": "You are not logged in currently. Please login to access this feature.",
+        "profileImageEditSuccess": "Successfully edited the profile image"
     },
     "error": {
         "login": "Invalid username or password",
