- Implemented maps api integration using openstreet maps - Implemented dynamic pricing system - UI changes - Added driver vehicle saving - Other improvements

--- a/frontend/src/i18n/languages/en.json
+++ b/frontend/src/i18n/languages/en.json
@@ -157,6 +157,16 @@
     "comment": "Comments",
     "rememberVehicleDetails": "Remember for future use",
     "vehicleDetails": "Vehicle Details",
+    "fuelType": "Fuel Type",
+    "ac": "AC (Car only)?",
+    "confirmRide": "Confirm Ride",
+    "dropoff": "Dropoff",
+    "pickup": "Pickup",
+    "amount": "Amount",
+    "petrol": "Petrol",
+    "diesel": "Diesel",
+    "cng": "CNG",
+    "rs": "₹",
     "messages": {
         "loginSuccess": "Successfully logged in",
         "registerSuccess": "Registered successfully",
@@ -175,7 +185,7 @@
         "cancelRideSuccess": "Your ride has been cancelled",
         "rejectRideSuccess": "You have successfully rejected the ride",
         "confirmCancelRide": "Are you sure you want to cancel your ride ? This process cannot be undone later.",
-        "confirmRejectRide": "Are you sure you want to reject this ride ? You will not be able to request again then.",
+        "confirmRejectRide": "Are you sure you want to reject this ride ?",
         "confirmCompleteRide": "Are you sure your ride is completed ?",
         "completeRideSuccess": "Your ride has been completed successfully",
         "verifySuccess": "Verified successfully",
